<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context="com.example.fnspl.retail_app.Actvities.activity.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_logo"
        android:layout_gravity="center_horizontal"
        />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_background_upper"
            android:hint="@string/enteryourusername"
            android:layout_marginTop="@dimen/_18sdp"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/colorGreydeep"
            android:singleLine="true"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/enteryourpassword"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textColor="@color/colorGreydeep"

            />

        <EditText
            android:textColor="@color/colorGreydeep"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:hint="@string/enteryouremail"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            />

        <EditText
            android:textColor="@color/colorGreydeep"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:inputType="phone"
            android:hint="@string/enteryourphonenumber"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:maxLength="10"
            />

        <EditText
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_background_lower"
            android:hint="@string/enteryourlocation"
            android:layout_marginTop="@dimen/_2sdp"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorGreydeep"
            android:textColor="@color/colorGreydeep"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            />











            <Button
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height_small"
                android:text="@string/SIGNUP"
                android:background="@drawable/btn_background_green"
                android:textColor="@color/colorGreydeep"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:elevation="@dimen/_1sdp"
                android:stateListAnimator="@null"


                />






    </LinearLayout>

</RelativeLayout>
